# MLaCTransformer

./: .gitignore  CHANGELOG.md  HOW_TO_USE.md  README.md  logging.ini  pyproject.toml  test_hook.txt  transformer.py
.claude/: settings.local.json
.githooks/: post-commit
mock/: edge_cases.yaml  input.xlsx  mock_data.json  rules.yaml
src/mlac_etl/extractor/: __main__.py  excel_to_json.py  xl_custom_functions.py
src/mlac_etl/logger/: __init__.py  logger.py
src/mlac_etl/params_validator/: __init__.py  params_validator.py
src/mlac_etl/transformer/: __main__.py  transform.py
src/mlac_transformer/: __init__.py  error_logger.py  excel_to_json.py  file_validator.py  transformers.py
src/mlac_transformer/error_logger/: __init__.py
src/mlac_transformer/excel_to_json/: __init__.py  excel_to_json.py
src/mlac_transformer/file_validator/: __init__.py
src/mlac_transformer/params_validator/: __init__.py  params_validator.py
src/mlac_transformer/transform/: __init__.py  transform.py
src/mlac_transformer/transformers/: __init__.py  transformers.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/extractor/: test_excel_to_json.py  test_xl_custom_functions.py
tests/unit/transformer/: test_transform.py
tests/unit/validator/: test_params_validator.py
