[tool.poetry]
name = "mlac-etl"
version = "0.1.0"
description = "A transformer application that processes Excel and YAML files"
authors = []
packages = [{include = "mlac_etl", from = "src"}]

[tool.poetry.scripts]
mlac-extractor = "mlac_etl.extractor.__main__:extractor"
mlac-transformer = "mlac_etl.transformer.__main__:transformer"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.0"
PyYAML = "^6.0.1"
jq = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
