[tool.poetry]
name = "mlac-etl"
version = "1.4.0"
description = "A transformer application that processes Excel and YAML files"
authors = []
packages = [{include = "mlac_etl", from = "src"}]

[tool.poetry.scripts]
mlac-extractor = "mlac_etl.extractor.__main__:extractor"
mlac-transformer = "mlac_etl.transformer.__main__:transformer"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.0"
PyYAML = "^6.0.1"
jq = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
commitizen = "^4.13.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
